# cvobjects

./: .gitignore  README.md
src/: CMakeLists.txt  createIPCPipeline.cpp  ipc.h  ipc.hpp  ipc_canny.hpp  ipc_colorsegmenthsv.hpp  ipc_findcontours.hpp  ipc_gaussianblurisotropic.hpp  ipc_generator.hpp  ipc_houghcircles.hpp  ipc_houghlines.hpp  ipc_laplacian.hpp  ipc_mask.hpp  ipc_morphologyEx.hpp  ipc_pipeline.cpp  ipc_pipeline.h  ipc_registration.hpp  ipc_threshold.hpp  log.h  parameter.hpp
